--- a/public/frontend/css/blog.css
+++ b/public/frontend/css/blog.css
@@ -156,7 +156,7 @@ h2 {
    float: right;
    background-color: #88c13d;
    margin-top: 100px;
-   height: 400px;
+   /* height: 400px; */
 }
 
 /* card 2 section*/
@@ -166,7 +166,7 @@ h2 {
   float: right;
   background-color: #dbdcdd;
   margin-top: 100px;
-  height: 400px;
+  /* height: 400px; */
 }
 
 /* card 3 section*/
@@ -176,7 +176,7 @@ h2 {
   float: right;
   background-color: #00b3fa;
   margin-top: 100px;
-  height: 400px;
+  /* height: 400px; */
 }
 
 /* card 4 section*/
@@ -186,7 +186,7 @@ h2 {
   float: right;
   background-color: #555555;
   margin-top: 100px;
-  height: 400px;
+  /* height: 400px; */
 }
 
 /* card 5 section*/
@@ -196,7 +196,7 @@ h2 {
   float: right;
   background-color: #Ff414b;
   margin-top: 100px;
-  height: 400px;
+  /* height: 400px; */
 }
 
 /* card 6 section*/
@@ -206,7 +206,7 @@ h2 {
   float: right;
   background-color: #0c3f73;
   margin-top: 100px;
-  height: 400px;
+  /* height: 400px; */
 }
 
 /* card 7 section*/
@@ -216,7 +216,7 @@ h2 {
   float: right;
   background-color: #ffd900;
   margin-top: 100px;
-  height: 400px;
+  /* height: 400px; */
 }
 
 .about_main_card1{ width: 100%; float: left; margin-bottom: 0px; margin-top: 40px; }
